<resources>
    <string name="app_name">FINAL</string>
    <string name="un_txtbox">Enter your username</string>
    <string name="pass_txtbox">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="or_seperator">Or</string>
    <string name="signup_button_text">Sign up</string>
    <string name="reenter_text">Re-enter your password</string>
    <string name="description_pfp">Profile Picture</string>
    <string name="tutor_name">Lebron James</string>
    <string name="tutor_job">Basketball Professional</string>
    <string name="tutor_description">Hello! I’m Lebron James, a professional basketball coach with over 40 years of experience both playing and coaching. I specialize in skill development, game strategy, and building mental toughness.</string>
    <string name="home_menu_label">Home</string>
    <string name="profile_menu_label">Profile</string>
    <string name="menu_menu_label">Menu</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>