<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:cardCornerRadius="8dp"
    android:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/tutor_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/description_pfp"
            android:src="@drawable/profile_picture" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tutor_name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor_name"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tutor_job_title_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor_job"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tutor_description_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tutor_description"
                android:textColor="#444444"
                android:textSize="14sp"
                android:justificationMode="inter_word"
                android:textAlignment="viewStart"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>